force-app/main/default/objects/OFAC_SDN_Sanction_List__c/OFAC_SDN_Sanction_List__c.object-meta.xml
<CustomObject>
    <label>OFAC SDN Sanction List</label>
    <nameField>
        <label>SDN Entity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OFAC SDN Sanction List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>