force-app/main/default/objects/OFAC_SDN_Sanction_List__c/fields/Call_Sign__c.field-meta.xml
<CustomField>
    <fullName>Call_Sign__c</fullName>
    <label>Call Sign</label>
    <length>10</length>
    <type>Text</type>
</CustomField>