force-app/main/default/objects/OFAC_SDN_Sanction_List__c/fields/GRT__c.field-meta.xml
<CustomField>
    <fullName>GRT__c</fullName>
    <label>GRT</label>
    <length>8</length>
    <type>Text</type>
</CustomField>