force-app/main/default/objects/OFAC_SDN_Sanction_List__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>