force-app/main/default/objects/OFAC_SDN_Sanction_List__c/fields/SDN_Type__c.field-meta.xml
<CustomField>
    <fullName>SDN_Type__c</fullName>
    <label>SDN Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>