force-app/main/default/objects/OFAC_SDN_Sanction_List__c/fields/Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Tonnage__c</fullName>
    <label>Tonnage</label>
    <length>14</length>
    <type>Text</type>
</CustomField>