force-app/main/default/objects/OFAC_SDN_Sanction_List__c/fields/unique_record_Identifier__c.field-meta.xml
<CustomField>
    <fullName>unique_record_Identifier__c</fullName>
    <label>unique record Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>