force-app/main/default/objects/OFAC_SDN_Sanction_List__c/fields/Vess_Flag__c.field-meta.xml
<CustomField>
    <fullName>Vess_Flag__c</fullName>
    <label>Vess Flag</label>
    <length>40</length>
    <type>Text</type>
</CustomField>