force-app/main/default/objects/OFAC_SDN_Sanction_List__c/fields/Vess_Owner__c.field-meta.xml
<CustomField>
    <fullName>Vess_Owner__c</fullName>
    <label>Vess Owner</label>
    <length>150</length>
    <type>Text</type>
</CustomField>