force-app/main/default/objects/OFAC_SDN_Sanction_List__c/fields/Vess_Type__c.field-meta.xml
<CustomField>
    <fullName>Vess_Type__c</fullName>
    <label>Vess Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>