force-app/main/default/objects/OFAC_SDN_Sanction_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Remarks__c</columns>
    <columns>SDN_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Balkans</value>
    </filters>
    <label>All</label>
</ListView>