force-app/main/default/objects/OFAC_SDN_Sanction_List__c/listViews/OFAC.listView-meta.xml
<ListView>
    <fullName>OFAC</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>SDN_Type__c</columns>
    <columns>unique_record_Identifier__c</columns>
    <columns>Title__c</columns>
    <columns>GRT__c</columns>
    <filterScope>Everything</filterScope>
    <label>OFAC</label>
</ListView>